Fixed Jump animation bug

--- a/application.css
+++ b/application.css
@@ -63,7 +63,7 @@
 	-fx-border-width: 0.0 3.0 40.0 3.0;
 	-fx-border-style: solid;
 	-fx-background-color: yellow;
-	-fx-border-color: blue;
+	-fx-border-color: black;
 }
 
 .playerTopJump4{
